--- a/style.css
+++ b/style.css
@@ -183,3 +183,40 @@ main .botao-meio:hover {
     margin: 0 auto;
     justify-content: center;
 }
+
+/* Sobre mim */
+.texto-sobre {
+    padding-top: 70px;
+    text-align: center;
+    font-size: 1rem;
+    padding-bottom: 40px;
+}
+.container-sobre-mim {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, auto);
+    margin: 0 auto;
+    text-align: left;
+    max-width: 1000px;
+    gap: 10px 10px;
+}
+
+.informacoes1 {
+    grid-column: 1;
+    grid-row: 1/1;
+}
+
+.informacoes2 {
+    grid-column: 1;
+    grid-row: 2/2;
+}
+
+.informacoes3 {
+    grid-column: 2;
+    grid-row: 1/3;
+}
+
+.informacoes4 {
+    grid-column: 2;
+    grid-row: 2/3;
+}
